Added functions in trafficReport to work with pie chart
String externalization